# src/main/java/com/garajeideas/coursemanagement/rest/validator/CourseRequestValidator.java
@@ -1,19 +1,13 @@
 package com.garajeideas.coursemanagement.rest.validator;
 
 import com.garajeideas.coursemanagement.openapi.web.rest.dtos.CourseRequest;
-
-import org.springframework.core.MethodParameter;
-import org.springframework.validation.BindingResult;
 import org.springframework.validation.Errors;
 import org.springframework.validation.ValidationUtils;
 import org.springframework.validation.Validator;
-import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 
-import java.time.Instant;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
-import java.util.Objects;
 
 @ControllerAdvice
 public class CourseRequestValidator implements Validator {
@@ -28,8 +22,8 @@ public class CourseRequestValidator implements Validator {
         CourseRequest courseRequest = (CourseRequest) target;
 
         ValidationUtils.rejectIfEmptyOrWhitespace(errors, "name", "The course name is required");
-        if (courseRequest.getName().length() < 3) {
-            errors.rejectValue("name", "The course name must be at least 3 characters long");
+        if (courseRequest.getName() == null || !courseRequest.getName().matches(".*\\S.*\\S.*\\S.*")) {
+            errors.rejectValue("name", "The course name must have at least 3 non-whitespace characters");
         }
 
         if (courseRequest.getMaxStudentCount() == null) {
@@ -41,17 +35,13 @@ public class CourseRequestValidator implements Validator {
         if (courseRequest.getStartDate() == null) {
             errors.rejectValue("startDate", "The start date is required");
         } else if (OffsetDateTime.now(ZoneOffset.UTC).toInstant().isAfter(courseRequest.getStartDate().toInstant())) {
-            errors.rejectValue("startDate", "The start date must be equal to or later than the current date");
+            errors.rejectValue("startDate", "The start date must be later than the current date");
         }
 
         if (courseRequest.getEndDate() == null) {
             errors.rejectValue("endDate", "The end date is required");
         } else if (courseRequest.getEndDate().isBefore(courseRequest.getStartDate())) {
             errors.rejectValue("endDate", "The end date must be after the start date");
-        }
-
-        if (courseRequest.getRegistrationDate() == null) {
-            errors.rejectValue("registrationDate", "The registration date is required");
         }
     }
 }
